--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -153,7 +153,11 @@ The following table give the defined record types and tags. Tags with
 	{\tt PP} values may be modified when merging SAM files in order to handle collisions of {\tt PG} {\tt ID}s.
 	The first {\tt PG} record in a chain (i.e. the one referred to by the {\tt PG} tag in a SAM record)
 	describes the most recent program that operated on the SAM record.
-	The next {\tt PG} record in the chain describes the next most recent program that operated on the SAM record. \\\cline{2-3}
+	The next {\tt PG} record in the chain describes the next most recent program that
+        operated on the SAM record. The {\tt PG} {\tt ID} on a SAM record is not required
+        to refer to the newest {\tt PG} record in a chain.  It may refer to any {\tt PG}
+        record in a chain, implying that the SAM record has been operated on by the
+        program in that {\tt PG} record, and the program(s) referred to via the {\tt PP} tag. \\\cline{2-3}
   & {\tt VN} & Program version \\\cline{1-3}
   \multicolumn{2}{|l}{\tt @CO} & One-line text comment. Unordered multiple {\tt @CO} lines are allowed.\\
   \cline{1-3}
